# LLM_Zoomcamp

./: .gitignore  README.md  pyproject.toml  render.yaml  test.ipynb
.github/workflows/: final-project-tests.yml
final-project/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  requirements.txt
final-project/data/eval/: llm_evaluation.json  llm_golden_set.jsonl  retrieval_evaluation.json  retrieval_golden_set.jsonl
final-project/docs/: rag_learning_guide.md
final-project/pages/: 1_Monitoring.py
final-project/scripts/: bootstrap.py  build_prompt.py  chat.py  embed_document_chunks.py  extract_multisource_aligned.py  extract_tmdb_smoke_test.py  ingest_chroma.py  llm_eval.py  open_duckdb.py  refresh_data.py  retrieval_eval.py  retrieve.py  run_pipeline.py  start_cloud.py  transform_canonical.py
final-project/src/cultural_mood_tracker/: __init__.py
final-project/tests/: test_chat_sql_aggregation.py
final-project/tests/unit/: test_cloud_start.py  test_document_chunks.py  test_document_pipeline.py  test_evaluation.py  test_local_sql.py  test_observability.py  test_rag_chat.py  test_retriever.py  test_source_security.py
llm-zoomcamp-hw2/: README.md  homework.py  main.py  pyproject.toml
llm-zoomcamp-hw4/: hw_solutions.py
llm-zoomcamp-hw5/: main.py  pyproject.toml  rag_helper.py  sqlite_span_exporter.py  starter.py
llm-zoomcamp-hw6/: agent.py  inspect_latest_trace.py  logfire_pipeline.py  main.py  pyproject.toml  query_duckdb.py  question_3.py
(+71 files in other folders)
